Update README for beta v1.0, refactor AI integration

--- a/.env.example
+++ b/.env.example
@@ -26,9 +26,5 @@ GITHUB_CLIENT_SECRET=""
 LINKEDIN_CLIENT_ID=""
 LINKEDIN_CLIENT_SECRET=""
 
-# Claude AI (Anthropic)
-# Get API key at: https://console.anthropic.com/
-ANTHROPIC_API_KEY=""
-
-# Admin
-ADMIN_EMAIL="admin@example.com"
+# AI Command (your AI CLI tool)
+AI_COMMAND="your-ai-cli"
